# crewai-test

./: README.md  a  pyproject.toml
src/collaboration/: collaboration.py
src/crewai_test/: crewai_test.py
src/crewai_test/config/: agents.yaml  tasks.yaml
